[package]
name = "curve-fever"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
# default-run = "curve-fever" # main.rs
# cargo run --bin server
# cargo run --bin client


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://crates.io/
[dependencies]
bevy = "0.14.2"
rand = "0.8.5"
dotenv = "0.15.0"
serde = "1.0.215"
bincode = "1.3.3"
bevy_renet = "0.0.12"
local-ip-address = "0.6.3"


[profile.dev]
opt-level = 0
incremental = true
