[package]
name = "wardogs"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
# cargo run --bin server
# cargo run --bin client


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://crates.io/
[dependencies]
bevy = "0.14.2"
rand = "0.8.5"
dotenv = "0.15.0"
serde = "*"
bevy_renet = "*"
avian2d = "0.1"
bincode = "1.3.3"
local-ip-address = "0.6.3"


[profile.dev]
opt-level = 0
incremental = true
